--- a/Aset/index.html
+++ b/Aset/index.html
@@ -35,7 +35,7 @@
                 </div>
             </div>
             <div id="kapal" style="position:absolute; left:400px; bottom:140px; z-index:1;">
-                <img src="ship1.png" width="30%"/>
+                <img src="./ship1.png" width="30%"/>
             </div>
             <div id="pohon_kanan" style="position:absolute; right:30px; bottom:13px; z-index:1;">
                 <img src="pohon_dark.png" width="330px"/>
